updated nav bar, wrapped it in a container, gave it a position of fixed

--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -23,37 +23,33 @@ a {
 		outline: 0;
 	}
 }
-/*header logo*/
 
-// .header-logo{
-// 	background-image:url("../../images/logos/inhabitent-logo-tent.svg");
-// }
-/* Menus */
 
-// .screen-reader-text{
-// 	background-image:url("../../images/logos/inhabitent-logo-tent.svg");
-// 	background-size: 50px 33px;
-// 	height: 33px;
-// 	margin: 0;
-// 	overflow: hidden;
-// 	text-indent: 100%;
-// 	white-space: nowrap;
-// 	height:50px;
-// 	clip:0px;
-// }
-
-// 
-.main-navigation {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	border-bottom: #eee solid 1px;
-	padding-top:1rem;
-
-	a img{
-		height:50px;
-		width:50px;
+	.hfeed{
+		.site-header{
+			width:100%;
+			position:	fixed;
+			padding-top:1rem;
+			border-bottom: solid #EEE 1px;
+			background-color:$main;
+			z-index:3; 
+				.header-container{
+					display: flex;
+					justify-content: space-around;
+				}
+				.site-branding{
+					a img{
+						height:35px;
+					}
+				}
+		}
 	}
+
+
+
+.main-navigation {
+	display: flex;
+  align-items: center;
 
 	ul {
 		display: none;
